# libndi

./: README.md
examples/example-find/: CMakeLists.txt
examples/example-recv-gl/: CMakeLists.txt  ndi_recv_gl.cpp
src/: find_avahi.c
